<?xml version="1.0" encoding="utf-8"?>
<resources> 
    <string name="language">zh-CN</string>   
	<string name="app_name">Car Online</string>
    <string name="Note">Note</string>
    <string name="image_description">Image</string>
    <!-- 起始页 -->
    <string name="last_update">last update 2013-10-21</string>
    <string name="copyright1">Copyright by Tracknet Asia</string>
    <string name="copyright2">2011-2012</string>
    
    <string name="car_data">Car Data</string>
    <string name="loading_car_context">loading...</string>
    <!-- 登录 -->
    <string name="tv_check_update">Hava a new version,please update</string>
    <string name="SD_NOTFIND">SD card does not exist</string>
    <string name="Google">google map can not be use </string>
    <string name="account_hit">Account</string>
    <string name="password_hit">Password</string>
    <string name="login">Login</string>
    <string name="check_pwd">Remember Password</string>
    <string name="login_pd_context">Login...</string>
    <string name="login_id_wrong">Account and password does not match,try again</string>
    <string name="Login_null">Account and password can not be null,try again</string>
    <string name="accout_bind_phone">The account has been bound to other mobile phone</string>
    <!-- 主页面 -->        
    <string name="search_hit">input the keyword</string>
    <string name="exit_content">Exit application?</string>   
    <string name="monitor_car">Track</string>
    <string name="monitor_locus">Track Playback</string>
    
    
    <string name="locus_dialog_start">Start Time:</string>
    <string name="locus_dialog_stop">End Time:</string>
    <string name="locas_speed">Speed</string>    
    <string name="monitor_locus_load">Searching history path...</string>
    <string name="monitor_locus_null">No history paht. </string>
    <string name="car_dialog_title">Confirm the time</string>
      <string name="track_play_finish">Track playback was done</string>
    <string name="car_dialog_ok">Search</string>
    <string name="car_dialog_et_null">Time can not be null</string>
    <string name="car_dialog_time_wrong">Starting time can not be greater than the end time</string>
    <string name="car_dialog_time_limit">Time must be interval at 24 hours</string>
    <string name="time_choose">Time Select</string>
    
    <string name="Location_wrong">Loaction Exception</string>
    <string name="allcar_config">Parameter information</string>
    <string name="bt_updatePwd">Modify password</string>
    
    <!-- 配置界面 -->   	
    
    <string name="my_info">My Information</string>
    
   	<string name="is_ref">Auto refresh</string>
   	<string name="is_ref_yes">Yes</string>
   	<string name="is_ref_no">No</string>   	
   	<string name="config_update_time">Refresh(s)</string>
    <string name="config_update_in_xml_ok">Configuration information to add success</string>    
   	
   	<string name="oldPassWord">Old password:</string>
    <string name="newPassWord">New password:</string>
    <string name="newPassWordToo">Enter new password again</string>
    <string name="changePwd_title">Password modification</string>
    <string name="setting">Parameter Setting</string>
    <string name="change_pwd_null">Account message can not be null</string>
    <string name="change_pwd_TwoNewPwd_false">2 new password input is different,try again</string>
    <string name="change_pwd_now">The password is being modified.</string>
    <string name="change_pwd_true">Password is changed</string>
    <string name="change_pwd_false">Password modify failed,try again.</string>
    
    <string name="serach_pd_title">Read data</string>
    <string name="serach_pd_context">Reading data...</string>
    <string name="search_null">No match data</string>
    
    <string name="Traffic">Normal</string>
    <string name="Satellite">Satellite</string>
    <string name="Location">Getting The Location...</string>    
   	
   	<string name="car_mileage">Mileage:&#160; </string> 
   	<string name="car_manager">Manager:&#160; </string> 
   	<string name="car_driver">Driver:&#160; </string> 
   	<string name="car_fuel">Fuel:</string>
   	<string name="cancel">Cancel</string>
   	<string name="track_replay">Track Playback</string>
   	<string name="track">Track</string>
   	
   	<string name="xlistview_header_hint_normal">Pull down refresh</string>
    <string name="xlistview_header_hint_ready">Loosen refresh</string>
    <string name="xlistview_header_hint_loading">Loading...</string>
    <string name="xlistview_header_last_time">Last update:</string>
    <string name="xlistview_footer_hint_normal">More...</string>
    <string name="xlistview_footer_hint_ready">Release load more</string>    
   	
	<string-array name="alarm1">
   		<item>Line alarm</item>
   		<item>GPS disconnection alarm</item>
   		<item>Speed Alarm</item>
   		<item>Low voltage alarm</item>
   		<item>Overtime parking alarm</item>
   		<item>Sensor 1 On</item>
   		<item>Sensor 2 On</item>
   		<item>Sensor 3 On</item>
   		<item>Locked car status</item>
   	</string-array>
   	
    <string name="total">Total</string>
    <string name="alarm">Alarm</string>
   	<string name="accon">Start UP</string>
    <string name="accoff">Flameout</string>
    
    <string name="traffic_flow_on">Traffic Flow Was On</string>
    <string name="traffic_flow_off">Traffic Flow Was Off</string>
    <string name="app_version">Version:</string>
    <string name="can_not_be_null">Can not be null</string>
    
    <string name="notifi">Notice</string>
    
    <string name="no_car">no cars</string>
    <string name="car_stop">Stop,</string>
    <string name="car_drive">Driving,</string>
    <string name="speed_kmh">km/h</string>
    <string name="car_offline">Off-line,</string>
    <string name="car_Blind">Blind area,</string>
    
    <string name="car_emergency_alarm">Emergency Alarm,</string>
	<string name="car_speed_alarm">Speed Alarm,</string>
	<string name="car_vibration_alarm">Vibration Alarm,</string>
	<string name="car_displacement_alarm">Displacement Alarm,</string>
	
	<string name="car_burglar_alarm">Burglar Alarm,</string>
	<string name="car_illegal_driving_alarm">Illegal Driving,</string>
	<string name="car_into_fence_alarm">Into The Fence Alarm,</string>
	<string name="car_out_of_fence_alarm">Out Of The Fence Alarm,</string>
	<string name="car_cut_off_line_alarm">Cut Of Line Alarm,</string>
	<string name="car_low_power_alarm">Low Power Alarm,</string>
	
	<string name="car_GPS_disconnection_alarm">GPS Disconnect Alarm,</string>
	<string name="car_fatigue_driving_alarm">Fatigue Driving Alarm,</string>
	<string name="car_illegal_power_alarm">Illegal Power On Alarm,</string>
	<string name="car_illegal_door_alarm">Illegal Door Alarm,</string>
    
    
    <string name="car_set_fortification">Set Fortification,</string>
	<string name="car_Lock_the_car">Lock The Car,</string>
	<string name="car_base_station_location">Base Station Location,</string>
	<string name="car_energy_saver_mode">Energy Saver Mode,</string>
    
</resources>